# agentic-generator-paper

./: .gitignore  README.md  ontology.ttl  runner.py  test_all_outputs.py  test_cust_support_workflow.py  test_email_workflow.py
data/: dummy01.ttl  dummy02.ttl  dummy03.ttl  dummy04.ttl  dummy05.ttl  dummy06.ttl  dummy07.ttl  dummy08.ttl  dummy09.ttl  dummy10.ttl  dummy11.ttl  dummy12.ttl  dummy13.ttl  dummy14.ttl  dummy15.ttl  dummy16.ttl  dummy17.ttl  dummy18.ttl  dummy19.ttl  dummy20.ttl  dummy21.ttl  dummy22.ttl  dummy23.ttl  dummy24.ttl  dummy25.ttl
generated_kg/CrewAI/: game-builder-crew_instances.ttl  industry-agents_instances.ttl  instagram_post_instances.ttl  job-posting_instances.ttl  landing_page_generator_instances.ttl  markdown_validator_instances.ttl  marketing_strategy_instances.ttl  match_profile_to_positions_instances.ttl  meta_quest_knowledge_instances.ttl  prep-for-a-meeting_instances.ttl  recruitment_instances.ttl  screenplay_writer_instances.ttl  starter_template_instances.ttl  stock_analysis_instances.ttl  surprise_trip_instances.ttl  trip_planner_instances.ttl
kg_g3/autogen/: chess_game.ttl  code_execution.ttl  feedback_agent.ttl  function_calling.ttl  group_chat.ttl  human_feedback.ttl  planning_agent.ttl  retrieve_chat.ttl  stream_chat.ttl  teaching_agent.ttl  two_agent_chat.ttl
kg_g3/crewai/: content_creator_flow.ttl  crewai_langgraph.ttl  email_auto_responder_flow.ttl  game_builder.ttl  instagram_post.ttl  job_posting.ttl  landing_page_generator.ttl  lead_score_flow.ttl  marketing_strategy.ttl  match_profile_to_positions.ttl  recruitment.ttl  starter_template.ttl  stock_analysis.ttl  write_book_flow.ttl
output_files/output_crewai/game-builder-crew/: crew.py  main.py  pyproject.toml
output_files/output_crewai/game-builder-crew/config/: agents.yaml  inputs.yaml
output_files/output_crewai/industry-agents/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/industry-agents/config/: agents.yaml  inputs.yaml
output_files/output_crewai/instagram_post/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/instagram_post/config/: agents.yaml  inputs.yaml
output_files/output_crewai/job-posting/: crew.py  main.py  pyproject.toml
output_files/output_crewai/job-posting/config/: inputs.yaml
output_files/output_crewai/landing_page_generator/: crew.py  main.py  pyproject.toml
output_files/output_crewai/landing_page_generator/config/: agents.yaml  inputs.yaml
output_files/output_crewai/markdown_validator/: crew.py  main.py  pyproject.toml
output_files/output_crewai/markdown_validator/config/: agents.yaml  inputs.yaml
output_files/output_crewai/marketing_strategy/: crew.py  main.py  pyproject.toml
output_files/output_crewai/marketing_strategy/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/match_profile_to_positions/: crew.py  main.py  pyproject.toml
output_files/output_crewai/match_profile_to_positions/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/meta_quest_knowledge/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/meta_quest_knowledge/config/: agents.yaml  inputs.yaml
output_files/output_crewai/prep-for-a-meeting/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/prep-for-a-meeting/config/: agents.yaml  inputs.yaml
output_files/output_crewai/recruitment/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/recruitment/config/: agents.yaml  inputs.yaml
output_files/output_crewai/screenplay_writer/: crew.py  main.py  pyproject.toml
output_files/output_crewai/screenplay_writer/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/starter_template/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/starter_template/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/stock_analysis/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/stock_analysis/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/surprise_trip/: crew.py  main.py  pyproject.toml
output_files/output_crewai/surprise_trip/config/: agents.yaml  inputs.yaml  tasks.yaml
output_files/output_crewai/trip_planner/: .env.example  crew.py  main.py  pyproject.toml
output_files/output_crewai/trip_planner/config/: inputs.yaml
scripts/: add_kickoff_inputs.py  normalize_kg.py
src/: mapper_autogen.py  mapper_crewai.py  parser.py
src/crewai/: extractor.py  generator.py  models.py
src/crewai/templates/: crew.py.j2  main.py.j2
