[project]
name = "blog_crew_industryspecializedagentsexample"
version = "0.1.0"
description = "Crew assembled to produce industry-specific analyses of Weaviate features. Agent"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "WeaviateVectorSearchTool"
    # TODO: add PyPI package for custom tool "SerperDevWebSearchTool"
]

[project.scripts]
blog_crew_industryspecializedagentsexample = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
