[project]
name = "expand_idea_crewteam"
version = "0.1.0"
description = "Derived from src/landing_page_generator/crew.py ExpandIdeaCrew class. Process: s"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    # TODO: add PyPI package for custom tool "SearchtheinternetSearchToolssearchinternet"
    # TODO: add PyPI package for custom tool "ScrapewebsitecontentBrowserToolsscrapeandsummarizewebsite"
    # TODO: add PyPI package for custom tool "WritefiletoworkdirFileToolswritefile"
    # TODO: add PyPI package for custom tool "LearnlandingpageoptionsTemplateToolslearnlandingpageoptions"
    # TODO: add PyPI package for custom tool "CopylandingpagetemplatetoprojectfolderTemplateToolscopylandingpagetemplatetoprojectfolder"
    # TODO: add PyPI package for custom tool "Readfilefilemanagementtoolkitreadfile"
    # TODO: add PyPI package for custom tool "Listdirectoryfilemanagementtoolkitlistdirectory"
    # TODO: add PyPI package for custom tool "Filemanagementtoolkitcontainerprovidesreadfilelistdirectorytools"
]

[project.scripts]
expand_idea_crewteam = "main:run"
train      = "main:train"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
